Update SpellFieldDebugRenderer